# m3ta-empire

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: eval-smoke.yml  personas-validate.yml
adapters/build-adapter/: .env.example  BOOTSTRAP.md  PROMPT.md  (+3 more)
docs/: route-health.md  swap-default-model.md
evals/coding-models/: .gitignore  README.md  pyproject.toml
evals/coding-models/configs/: mock.yaml  ollama-local.yaml  openrouter.yaml
evals/coding-models/fixtures/long_context/: README.md  corpus.md  needles.json
evals/coding-models/fixtures/refactor/: README.md  brief.md  expected.json
evals/coding-models/fixtures/refactor/sample/: package.json
evals/coding-models/fixtures/refactor/sample/tests/: index.test.ts
evals/coding-models/fixtures/reliability/: README.md  tasks.json
evals/coding-models/fixtures/vision/: README.md  sample.json  single-button-page.expected.html
evals/coding-models/harness/: __init__.py  config.py  runner.py
evals/coding-models/harness/backends/: __init__.py  base.py  mock.py  ollama.py  openrouter.py
evals/coding-models/harness/scoring/: __init__.py  needle_haystack.py  pixel_diff.py  pytest_runner.py
evals/coding-models/harness/tasks/: __init__.py  base.py  long_context.py  refactor.py  reliability.py  vision_to_code.py
evals/coding-models/scripts/: run-eval.sh
evals/coding-models/tests/: test_mock_backend.py  test_runner.py
launchagents/: com.m3taos.route-health.plist
m3ta-mcp/: README.md  server.py
scripts/: dev-down.sh  dev-up.sh  route-health.sh  validate-personas.py
(+17 files in other folders)
